z-index added to fix header scroll on mobile

--- a/static/css/responsive/responsive.css
+++ b/static/css/responsive/responsive.css
@@ -21,6 +21,7 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    z-index: 999999;
   }
   .bg_1 {
     background-position: center;
